tests/good/typing/027-ne-int-char.clap
val x = (42 != 'c')
