tests/bad/lexical/039-app-3.clap
val x = a (b c)) d
 
